--- a/public/css/wufoo-form-gcrc.css
+++ b/public/css/wufoo-form-gcrc.css
@@ -183,7 +183,7 @@ form li div label, form li span label {
     clear: both;
     font-size: 85%;
     line-height: 160%;
-    color: #BC9B5D;
+    color: #000;
     display: block;
 }
 
@@ -195,12 +195,12 @@ fieldset {
 }
 
 label {
-    color: #BC9B5D
+    color: #000
 }
 
 label.desc, legend.desc {
     font-weight: bold;
-    color: #BC9B5D;
+    color: #000;
     line-height: 150%;
     margin: 0;
     padding: 0 0 3px 0;
@@ -553,9 +553,14 @@ form li.buttons input {
 }
 
 input.btTxt {
-    padding: 0 7px;
-    width: auto;
-    overflow: visible;
+    background-color: #000;
+    border: none;
+    color: #BC9B5D;
+    padding: 6px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 .safari input.btTxt {
