Update form for Umanota

--- a/public/css/wufoo-form-gcrc.css
+++ b/public/css/wufoo-form-gcrc.css
@@ -553,9 +553,9 @@ form li.buttons input {
 }
 
 input.btTxt {
-    background-color: #000;
+    background-color: #BC9B5D;
     border: none;
-    color: #BC9B5D;
+    color: #ffffff;
     padding: 6px 22px;
     text-align: center;
     text-decoration: none;
