--- a/public/css/card.css
+++ b/public/css/card.css
@@ -37,7 +37,7 @@ body
     padding: 10px 15px;
 }
 .pass {
-    background: {{ "image/BG_WEB.png" }};
+    background:  url("image/BG_WEB.png");
 }
 
 .decoration {
